--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="empty_events_list">There are no events around you</string>
+    <string name="title_activity_view_event">ViewEventActivity</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
