--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,12 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="empty_events_list">There are no events around you</string>
+    <string name="title_activity_create_new_event">New event</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="create_event">Create event</string>
+    <string name="choose_date">Choose date:</string>
+
+
+
 
 </resources>
