save and back button added
Added save button and made back button working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="create_event">Create event</string>
     <string name="choose_date">Choose date:</string>
+    <string name="name_event">Name your event:</string>
 
 
 
