--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,17 +3,24 @@
 
     <string name="app_name">LinkU</string>
     <string name="action_settings">Settings</string>
+
+    <!-- Empty text -->
     <string name="empty_events_list">There are no events around you</string>
+
+    <!-- Placeholders -->
     <string name="placeholder_events_item_name">Event Name</string>
     <string name="placeholder_events_item_time">00:00</string>
     <string name="placeholder_events_item_distance">0 km</string>
     <string name="placeholder_events_item_attendees">0</string>
+
     <string name="create_event">Create Event</string>
     <string name="title_activity_view_event">Event</string>
     <string name="title_activity_create_new_event">New event</string>
-    <string name="save_new_event_button">Save</string>
+
+    <!-- Create new event -->
     <string name="time_date_event_hint">Pick Date and Time</string>
     <string name="name_event_hint">Name for Event</string>
     <string name="attendees_event_hint">Maximum Number of People</string>
+    <string name="save_new_event_button">Save</string>
 
 </resources>
