--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,6 @@
     <string name="placeholder_events_item_time">00:00</string>
     <string name="placeholder_events_item_distance">0 km</string>
     <string name="placeholder_events_item_attendees">0</string>
-
     <string name="create_event">Create Event</string>
     <string name="title_activity_view_event">Event</string>
     <string name="title_activity_create_new_event">New event</string>
@@ -22,5 +21,9 @@
     <string name="name_event_hint">Name for Event</string>
     <string name="attendees_event_hint">Maximum Number of People</string>
     <string name="save_new_event_button">Save</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="title_map">Map</string>
+    <string name="title_events">Events</string>
 
 </resources>
