--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,11 @@
     <string name="title_events">Events</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!-- Login / SignUp -->
+    <string name="login">Log in</string>
+    <string name="signup">Sign up</string>
+    <string name="powered_by">Powered by</string>
+    <string name="parse">Parse</string>
+    <string name="slogan">Because moments are around you</string>
+
 </resources>
