Write event to Parse
Send created events to Parse

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="title_map">Map</string>
     <string name="title_events">Events</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="progress_create_event">Creating event ...</string>
 
 </resources>
