--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="title_events">Events</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="progress_create_event">Creating event ...</string>
+    <string name="placeholder_category">Event type</string>
 
 </resources>
