--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,7 @@
     <string name="powered_by">Powered by</string>
     <string name="parse">Parse</string>
     <string name="slogan">Because moments are around you</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="action_logout">Log Out</string>
 
 </resources>
