--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="create_event">Create Event</string>
     <string name="title_activity_view_event">Event</string>
     <string name="title_activity_create_new_event">New event</string>
+    <string name="title_activity_edit_event">Edit event</string>
 
     <!-- Create new event -->
     <string name="time_date_event_hint">Pick Date and Time</string>
