--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
 
     <string name="app_name">LinkU</string>
     <string name="action_settings">Settings</string>
-    <string name="action_search">Search event</string>
     <string name="action_confirm">Confirm</string>
 
     <!-- Empty text -->
@@ -17,20 +16,13 @@
     <string name="placeholder_events_item_day">Date</string>
     <string name="placeholder_events_item_location">Location</string>
     <string name="placeholder_events_item_attendees">Participants</string>
-    <string name="create_event">Create Event</string>
-    <string name="title_activity_view_event">Event</string>
     <string name="title_activity_create_new_event">New event</string>
 
     <!-- Create new event -->
-    <string name="time_date_event_hint">Pick Date and Time</string>
-    <string name="name_event_hint">Name for Event</string>
-    <string name="attendees_event_hint">Maximum Number of People</string>
-    <string name="save_new_event_button">Save</string>
-    <string name="hello_world">Hello world!</string>
     <string name="title_map">Map</string>
     <string name="title_events">Events</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="progress_create_event">Creating event ...</string>
+    <string name="progress_create_event">Creating event …</string>
     <string name="placeholder_category">Event type</string>
 
     <!-- Login / SignUp -->
@@ -42,5 +34,7 @@
     <string name="sign_up">Sign Up</string>
     <string name="action_logout">Log Out</string>
     <string name="refresh">Refresh</string>
+    <string name="no_internet">Connect to a network, then try again.</string>
+    <string name="no_account">Don\'t have an account?</string>
 
 </resources>
