--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,6 @@
     <!-- Create new event -->
     <string name="title_map">Map</string>
     <string name="title_events">Events</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="progress_create_event">Creating event …</string>
     <string name="placeholder_category">Event type</string>
 
@@ -36,6 +35,6 @@
     <string name="refresh">Refresh</string>
     <string name="no_internet">Connect to a network, then try again.</string>
     <string name="no_account">Don\'t have an account?</string>
-    <string name="progress_load_events">Loading events ...</string>
+    <string name="progress_load_events">Loading events …</string>
 
 </resources>
