--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,9 @@
     <string name="progress_create_event">Creating event …</string>
     <string name="placeholder_category">Event type</string>
 
+    <!-- Editing event -->
+    <string name="progress_edit_event">Saving event …</string>
+
     <!-- Login / SignUp -->
     <string name="login">Log in</string>
     <string name="signup">Sign up</string>
