--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,11 @@
     <string name="no_internet">Connect to a network, then try again.</string>
     <string name="no_account">Don\'t have an account?</string>
     <string name="progress_load_events">Loading events …</string>
+    <string name="prompt_email">Email</string>
+    <string name="action_reset">Reset</string>
+    <string name="forgotton_password">Forgot your password?</string>
+    <string name="reset_password_dialog_title">Reset password</string>
+    <string name="reset_password_dialog_explanation">Enter email to receive a reset link</string>
+    <string name="linku_logo">LinkU Logo</string>
 
 </resources>
