Added edit button to view event

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="title_feed">Feed</string>
     <string name="action_refresh_feed">Refresh Feed</string>
     <string name="placeholder_secondary">Secondary information</string>
+    <string name="action_edit">Edit</string>
 
 </resources>
