Participants list with profile image
Added image to event not mandatory

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="action_edit">Edit</string>
     <string name="progress_get_event">Fetching event …</string>
 
+    <string name="no_attendees">No participants yet. Be the first to join!</string>
+
 </resources>
